--- a/platform-resources_eng/src/messages/RefactoringBundle.properties
+++ b/platform-resources_eng/src/messages/RefactoringBundle.properties
@@ -207,8 +207,8 @@ select.refactoring.title=Select Refactoring
 what.would.you.like.to.do=What would you like to do?
 move.packages.to.another.package=Move {0} &packages to another package
 move.package.to.another.package=Move &package ''{0}'' to another package
-move.directories.to.another.source.root=Move {0} directories to &another package
-move.directory.to.another.source.root=Move directory {0} to &another package
+move.directories.to.another.source.root=Move {0} directories to &another source root
+move.directory.to.another.source.root=Move directory {0} to &another source root
 move.inner.class.to.upper.level=Move &inner class {0} to upper level
 move.inner.class.to.another.class=&Move inner class {0} to another class
 move.nonstatic.class.from.jsp.not.supported = Moving non-static classes from JSP page is not supported.
