--- a/platform-resources_eng/src/messages/RefactoringBundle.properties
+++ b/platform-resources_eng/src/messages/RefactoringBundle.properties
@@ -711,4 +711,5 @@ type.migration.include.action.text=&Include
 introduce.constant.enum.cb=Introduce as &enum constant
 move.enum.constant.cb=Move as &enum constants if possible
 move.to.different.language=Target class {2} has different language than {0} {1}
-dont.support.inner.classes={0} do not support inner classes  
+dont.support.inner.classes={0} do not support inner classes
+move.specified.elements=Move specified elements
