dataflow from this

--- a/platform-resources_eng/src/messages/LangBundle.properties
+++ b/platform-resources_eng/src/messages/LangBundle.properties
@@ -22,6 +22,7 @@ java.terms.of.enum={0} of enum {1}
 java.terms.of.annotation.type={0} of annotation type {1}
 java.terms.of.class={0} of class {1}
 java.terms.variable.of.method={0} of {1}
+java.terms.expression=expression
 terms.property=property
 unexpected.token=Unexpected token
 unexpected.eof=Unexpected end of file
