--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -1067,6 +1067,9 @@ action.NewDirectoryProject.description=Create a new project
 action.SliceBackward.text=Dataflow to this
 action.SliceBackward.description=Search for values which can be assigned to selected expression
 
+action.SliceForward.text=Dataflow from this
+action.SliceSliceForward.description=Search for values escaped from this location
+
 action.ShelvedChanges.Diff.text=Show Diff
 action.ShelvedChanges.Diff.description=Show diff for selected change
 
