rename: one directory as package and leave directories with the same package in other source roots untouched

--- a/platform-resources_eng/src/messages/RefactoringBundle.properties
+++ b/platform-resources_eng/src/messages/RefactoringBundle.properties
@@ -216,7 +216,9 @@ package.occurs.in.package.prefixes.of.the.following.source.folders.n=Package {0}
 these.package.prefixes.will.be.changed=These package prefixes will be changed.
 rename.title=Rename
 multiple.directories.correspond.to.package=Multiple directories correspond to package\n
-directories.and.all.references.to.package.will.be.renamed=\n\nAll these directories and all references to package \n{0}\nwill be renamed.\nDo you wish to continue?
+directories.and.all.references.to.package.will.be.renamed=\n\nDo you want to rename the whole package or directory \n{0} only?
+rename.package.button.text=Rename &package
+rename.directory.button.text=Rename &directory
 warning.title=Warning
 replace.constructor.with.factory.method.title=Replace Constructor With Factory Method
 class.does.not.have.implicit.default.consructor=Class {0} does not have implicit default consructor.
