VCS: file changed remotely hint

--- a/platform-resources_eng/src/messages/VcsBundle.properties
+++ b/platform-resources_eng/src/messages/VcsBundle.properties
@@ -30,6 +30,7 @@ label.commit.comment=&Comment
 dialog.title.choose.commit.message.from.history=Choose Message
 border.standard.checkin.options.group=Before {0}
 border.standard.after.checkin.options.group=After {0}
+checkbox.checkin.options.check.files.up.to.date=Check remote status
 checkbox.checkin.options.optimize.imports=&Optimize imports
 checkbox.checkin.options.reformat.code=&Reformat code
 progress.text.searching.for.modified.files=Searching for modified files
@@ -236,6 +237,8 @@ changes.nodetitle.locked.folders.tooltip=Some folders are locked; VCS operations
 changes.nodetitle.logicallt.locked.folders=Explicitly locked files
 changes.nodetitle.switched.files=Switched Files
 changes.nodetitle.updating=(updating...)
+changes.nodetitle.have.outdated.files=Some files are changed on server
+change.nodetitle.change.is.outdated=File is changed on server
 changes.nodetitle.changecount=({0,choice, 0#No files|1#1 file|2#{0} files})
 changes.nodetitle.directory.changecount=({0,choice, 0#No directories|1#1 directory|2#{0} directories})
 changes.nodetitle.directory.file.changecount=({0,choice, 0#No directories|1#1 directory|2#{0} directories} and {1,choice, 0#no files|1#1 file|2#{1} files})
