--- a/platform-resources_eng/src/messages/VcsBundle.properties
+++ b/platform-resources_eng/src/messages/VcsBundle.properties
@@ -393,6 +393,7 @@ multiple.file.merge.type.text=Text
 multiple.file.merge.loading.progress.title=Loading merge revisions...
 unknown.vcs.presentation=<Unknown VCS> ({0})
 show.diff.progress.title=Loading content...
+show.diff.progress.title.detailed=Loading content for {0}
 checkout.open.project.prompt=You have checked out an IntelliJ IDEA project file:\n{0}\nWould you like to open it?
 checkout.title=Checkout from Version Control
 checkout.create.project.prompt=Would you like to create an IntelliJ IDEA project for the sources you have checked out to {0}?
