keyboard shortcut for "Add Content Root" (RUBY-4578)

--- a/platform-resources_eng/src/messages/ProjectBundle.properties
+++ b/platform-resources_eng/src/messages/ProjectBundle.properties
@@ -116,7 +116,7 @@ module.paths.output.label=Output path:
 module.paths.test.output.label=Test output path:
 module.paths.searching.source.roots.progress=Searching for source roots in {0}
 module.paths.searching.source.roots.title=Adding Source Roots
-module.paths.add.content.action=Add Content Root
+module.paths.add.content.action=Add _Content Root
 module.paths.add.content.action.description=Add content root to the module
 module.paths.add.content.title=Select content root directory
 module.paths.add.content.prompt=Content root is a directory containing all files related to this module
