keep mnemonic of revert operation (IDEADEV-39483)

--- a/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
@@ -285,7 +285,7 @@ action.name.resolve.conflict=Resolve Conflict
 message.text.revert.no.modifications.found=No modifications to revert found
 label.select.files.and.directories.to.revert=Select files and directories to revert:
 dialog.title.revert.files=Revert Files
-action.name.revert=Revert
+action.name.revert=&Revert
 message.title.revert.no.modifications.found=No Modifications
 action.name.revert.files=Revert files
 action.name.set.property=Set Property
