remember inclde test source check IDEADEV-39490 renamed "dataflow to this" to "DF to here"

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -1064,10 +1064,10 @@ action.WelcomeScreen.CreateDirectoryProject.description=Create a new project
 action.NewDirectoryProject.text=New Project...
 action.NewDirectoryProject.description=Create a new project
 
-action.SliceBackward.text=Dataflow to this
+action.SliceBackward.text=Dataflow to here
 action.SliceBackward.description=Search for values which can be assigned to selected expression
 
-action.SliceForward.text=Dataflow from this
+action.SliceForward.text=Dataflow from here
 action.SliceSliceForward.description=Search for values escaped from this location
 
 action.ShelvedChanges.Diff.text=Show Diff
