legend for the patterns text field negated patterns are handled corectly now

--- a/resources_eng/src/messages/CompilerBundle.properties
+++ b/resources_eng/src/messages/CompilerBundle.properties
@@ -106,7 +106,7 @@ label.option.deploy.never=Never
 label.option.deploy.always=Always
 label.option.deploy.text=Deploy web applications to server after compilation:
 label.option.clear.output.directory.on.rebuild=C&lear output directory on rebuild
-label.option.resource.patterns.text=Resource patterns:
+label.option.resource.patterns.text=Resource patterns
 error.compiler.configurable.malformed.patterns=The following resource patterns are malformed:\n{0}
 exclude.from.compile.table.path.column.name=Path
 exclude.from.compile.table.recursively.column.name=Recursively
@@ -232,3 +232,4 @@ generated.ant.build.compile.modules.fail.custom.comipilers=Conflict between cust
 generated.ant.build.custom.compilers.comment=Custom Compiler Taskdefs
 label.generate.ant.script.inline.runtime.classpaths=Inline runtime classpaths
 label.generate.ant.script.generate.idea.home=Use current IDEA instance for idea.home property
+label.resource.patterns.legend=<html>Use <b>;</b> to separate patterns and <b>!</b> to negate a pattern.<br/>Accepted wildcards: <b>?</b> - exactly one symbol; <b>*</b> - zero or more symbols</html>
