introduce constant into nonexistent class: suggest to create (IDEADEV-39665)

--- a/platform-resources_eng/src/messages/RefactoringBundle.properties
+++ b/platform-resources_eng/src/messages/RefactoringBundle.properties
@@ -122,7 +122,7 @@ replace.fields.used.in.expressions.with.their.getters=Replace fields used in exp
 do.not.replace=Do &not replace
 replace.fields.inaccessible.in.usage.context=Replace fields &inaccessible in usage context
 replace.all.fields=&Replace all fields
-class.does.not.exist.in.the.project=Class does not exist in the project
+class.does.not.exist.in.the.project=Class does not exist in the project. Do you want to create it?
 no.field.name.specified=No field name specified
 field.exists=The field with the name {0}\nalready exists in class ''{1}''.\nContinue?
 choose.destination.class=Choose Destination Class
