--- a/plugins/maven/src/main/resources/DomBundle.properties
+++ b/plugins/maven/src/main/resources/DomBundle.properties
@@ -1,6 +1,6 @@
 inspection.group=Maven
 inspection.name=Maven Model Inspection
-fix.create.pom=Create pom.xml
+fix.create.module.pom=Create Module
 fix.update.indices=Update Maven Indices
 fix.parent.path=Fix relative path
 intention.choose.file=Choose File
