IDEADEV-39167 (Inspection to replace implementations of Listener with classes extending Adapter)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1734,3 +1734,7 @@ dynamic.regex.replaceable.by.compiled.pattern.problem.descriptor=<code>#ref()</c
 dynamic.regex.replaceable.by.compiled.pattern.quickfix=Replace with call to method of compiled Pattern constant
 ignore.serializable.option=ignore java.io.Serializable
 ignore.cloneable.option=ignore java.lang.Cloneable
+listener.may.use.adapter.display.name=Class may extend adapter instead of implementing listener
+listener.may.use.adapter.problem.descriptor=Class ''{0}'' may extend ''{1}'' instead of implementing <code>#ref</code> #loc
+listener.may.use.adapter.quickfix=Replace with ''extends {0}''
+listener.may.use.adapter.emtpy.methods.option=&Only warn when empty implementing methods are found
