--- a/resources_eng/src/messages/CompilerBundle.properties
+++ b/resources_eng/src/messages/CompilerBundle.properties
@@ -146,8 +146,8 @@ generate.ant.build.progress.message=Generating ant build...
 
 #artifacts
 packaging.element.text.output.root=<output root>
-label.text.main.class=Main Class:
-label.text.class.path=Class Path:
+label.text.main.class=&Main Class:
+label.text.class.path=Class &Path:
 element.type.name.artifact=Artifact
 dialog.title.choose.artifacts=Choose Artifacts
 node.text.0.directory.content=''{0}'' directory content
