Maven: 'create module with parent' quick fix

--- a/plugins/maven/src/main/resources/DomBundle.properties
+++ b/plugins/maven/src/main/resources/DomBundle.properties
@@ -1,6 +1,7 @@
 inspection.group=Maven
 inspection.name=Maven Model Inspection
-fix.create.module.pom=Create Module
+fix.create.module=Create Module
+fix.create.module.with.parent=Create Module with Parent
 fix.update.indices=Update Maven Indices
 fix.parent.path=Fix relative path
 intention.choose.file=Choose File
