--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -32,6 +32,7 @@
     <extensionPoint name="positionManagerDelegate" interface="org.jetbrains.plugins.groovy.extensions.debugger.ScriptPositionManagerHelper"/>
     <extensionPoint name="compilerExtension" interface="org.jetbrains.plugins.groovy.compiler.GroovyCompilerExtension"/>
     <extensionPoint name="facetExtension" interface="org.jetbrains.plugins.groovy.config.GroovyFacetExtension"/>
+    <extensionPoint name="configuration" interface="org.jetbrains.plugins.groovy.runner.GroovyConfiguration"/>
   </extensionPoints>
 
   <extensions defaultExtensionNs="org.intellij.groovy">
@@ -43,6 +44,9 @@
     <libraryManager implementation="org.jetbrains.plugins.groovy.config.GroovyLibraryManager"/>
     <libraryManager implementation="org.jetbrains.plugins.gant.config.GantLibraryManager" order="last"/>
     <positionManagerDelegate implementation="org.jetbrains.plugins.gant.debugger.GantPositionManagerHelper"/>
+
+    <configuration implementation="org.jetbrains.plugins.gant.runner.GantScriptRunConfiguration"/>
+    <configuration implementation="org.jetbrains.plugins.groovy.runner.GroovyScriptRunConfiguration" order="last"/>
   </extensions>
 
   <extensions defaultExtensionNs="com.intellij">
