--- a/plugins/maven/src/main/resources/IndicesBundle.properties
+++ b/plugins/maven/src/main/resources/IndicesBundle.properties
@@ -6,6 +6,7 @@ maven.index.updated.never=Never
 maven.index.updated.error=Error
 maven.indices.updating=Updating Maven Repository Indices...
 maven.indices.updating.index=Updating [{0}] {1}
+maven.indices.updating.processing=Processing indices...
 maven.indices.updating.saving=Saving indices...
 repository.plugin.corrupt={0} not a Maven 2 plugin file
 repository.plugin.title=Opening Maven plugin file
